--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,7 @@
-<button type="button" class="btn btn-success" [disabled]="!allowNewServer">Add Server</button>
-<app-server></app-server>
+<button type="button"
+class="btn btn-success"
+[disabled]="!allowNewServer"
+(click)="onCreareServer()">Add Server</button>
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
