--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,12 @@
+<label>Server Name</label>
+<input type="text"
+class="form-control"
+(input)="onUpdateServerName($event)">
 <button type="button"
 class="btn btn-success"
 [disabled]="!allowNewServer"
 (click)="onCreareServer()">Add Server</button>
+<p>{{serverName}}</p>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
