--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,18 +1,18 @@
 <label>Server Name</label>
-<!-- <input type="text"
-class="form-control"
-(input)="onUpdateServerName($event)"> -->
-<input type="text"
-class="form-control"
-[(ngModel)]="serverName">
 
-<!-- <button type="button"
-class="btn btn-success"
-[disabled]="!allowNewServer"
-(click)="onCreareServer()">Add Server</button> -->
-
-<p>{{serverName}}</p>
-<!-- <p>{{serverCreationStatus}}</p> -->
+<div class="form-inline">
+  <div class="form-group">
+    <input type="text" class="form-control" [(ngModel)]="userName">
+    <button type="button" class="btn btn-success" [disabled]="userName === ''" (click)="userName = ''">Clear</button>
+  </div>
+</div>
+<br>
+<h2>Dummy Paragraph</h2>
+<p>Lorem <span>{{userName}}</span> ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ipsa <span>{{userName}}</span> cupiditate
+   voluptate! Nemo repellendus <span>{{userName}}</span> porro unde facere magni aspernatur officia ad quas
+   blanditiis velit <span>{{userName}}</span> tempore iure fuga, ullam <span>{{userName}}</span> id eos dolorem,
+   esse omnis aut placeat nihil explicabo minus voluptatem est. Dolores dolor ex saepe possimus odio minus
+   voluptates molestias <span>{{userName}}</span> adipisci?</p>
 
 <!-- <app-server></app-server>
 <app-server></app-server> -->
