--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h3>app component!</h3>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <h3>app component!</h3>
+  <hr>
+  <app-servers></app-servers>
+</div>
