--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -8,5 +8,5 @@
 <br>
 <p *ngIf="serverCreated">Server created. It's name is: {{serverName}}</p>
 
-<!-- <app-server></app-server>
-<app-server></app-server> -->
+<app-server></app-server>
+<app-server></app-server>
