--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
 <div class="container">
-  <h3>app component!</h3>
+  <!-- <h3>app component!</h3>
+  <hr> -->
+  <h2>Assignment 3</h2>
+  <div class="container">
+    <ol>
+      <li>Add A button which says 'Display Details'</li>
+      <li>Add a paragraph with any content of your choice (e.g. 'Secret Password = tuna')</li>
+      <li>Toggle the displaying of that paragraph with the button created in the first step</li>
+      <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or simply an incrementing number)</li>
+      <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color (ngClass)</li>
+    </ol>
+  </div>
   <hr>
-  <app-servers></app-servers>
+  <app-assignment3></app-assignment3>
+  <!-- <app-servers></app-servers> -->
 </div>
