--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,28 @@
 <div class="container">
-  <!-- <h3>app component!</h3>
-  <hr> -->
-  <h2>Assignment 3</h2>
-  <div class="container">
-    <ol>
-      <li>Add A button which says 'Display Details'</li>
-      <li>Add a paragraph with any content of your choice (e.g. 'Secret Password = tuna')</li>
-      <li>Toggle the displaying of that paragraph with the button created in the first step</li>
-      <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or simply an incrementing number)</li>
-      <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color (ngClass)</li>
-    </ol>
+  <p>Add new servers or blueprints!</p>
+
+  <div>
+    <div class="form-group col-lg-6 px-0">
+      <label>Server Name</label>
+      <input type="text" class="form-control" [(ngModel)]="serverName">
+    </div>
+    <div class="form-group col-lg-6 px-0">
+      <label>Server content</label>
+      <input type="text" class="form-control" [(ngModel)]="serverContent">
+    </div>
+    <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
+    <button class="btn btn-primary" (click)="onAddBlueprint()">Add Server blueprint</button>
   </div>
-  <hr>
-  <app-assignment3></app-assignment3>
-  <!-- <app-servers></app-servers> -->
+
+  <div *ngFor="let card of cards">
+    <div class="card mt-3">
+      <div class="card-header">
+        {{card.name}}
+      </div>
+      <div class="card-body">
+        <p class="card-text" *ngIf="card.type === 'server'" style="color : red">{{card.content}}</p>
+        <p class="card-text" *ngIf="card.type === 'bp'" style="color : blue">{{card.content}}</p>
+      </div>
+    </div>
+  </div>
 </div>
