--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,6 @@
-.container {
-  margin-top: 30px;
-}
-
-p {
+.container > p:nth-child(1){
   color: blue;
+}
+.card-header{
+  background-color: rgba(0, 0, 0, 0.05);
 }
