--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,13 @@
 <div class="container">
   <p>Add new servers or blueprints!</p>
+  
+  <app-cockpit
+    (serverCreated)="onServerAdded($event)"
+    (bpCreated)="onBluePrintAdded($event)"
+  ></app-cockpit>
 
-  <div>
-    <div class="form-group col-lg-6 px-0">
-      <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="serverName">
-    </div>
-    <div class="form-group col-lg-6 px-0">
-      <label>Server content</label>
-      <input type="text" class="form-control" [(ngModel)]="serverContent">
-    </div>
-    <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
-    <button class="btn btn-primary" (click)="onAddBlueprint()">Add Server blueprint</button>
-  </div>
-
-  <div *ngFor="let card of cards">
-    <div class="card mt-3">
-      <div class="card-header">
-        {{card.name}}
-      </div>
-      <div class="card-body">
-        <p class="card-text" *ngIf="card.type === 'server'" style="color : red">{{card.content}}</p>
-        <p class="card-text" *ngIf="card.type === 'bp'" style="color : blue">{{card.content}}</p>
-      </div>
-    </div>
-  </div>
+  <app-server-element
+    *ngFor="let serverElement of serverElements"
+    [srvElement]="serverElement"
+  ></app-server-element>
 </div>
