--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -1,10 +1,10 @@
 <div class="form-group col-lg-6 px-0">
   <label>Server Name</label>
-  <input type="text" class="form-control" [(ngModel)]="serverName">
+  <input type="text" class="form-control" #serverNameInput>
 </div>
 <div class="form-group col-lg-6 px-0">
   <label>Server content</label>
-  <input type="text" class="form-control" [(ngModel)]="serverContent">
+  <input type="text" class="form-control" #serverContentInput>
 </div>
-<button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
-<button class="btn btn-primary" (click)="onAddBluePrint()">Add Server blueprint</button>
+<button class="btn btn-primary" (click)="onAddServer(serverNameInput.value, serverContentInput.value)">Add Server</button>
+<button class="btn btn-primary" (click)="onAddBluePrint(serverNameInput.value, serverContentInput.value)">Add Server blueprint</button>
