Accessing the DOM & tempelate with @ViewChild

--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -6,5 +6,5 @@
   <label>Server content</label>
   <input type="text" class="form-control" #serverContentInput>
 </div>
-<button class="btn btn-primary" (click)="onAddServer(serverNameInput.value, serverContentInput.value)">Add Server</button>
-<button class="btn btn-primary" (click)="onAddBluePrint(serverNameInput.value, serverContentInput.value)">Add Server blueprint</button>
+<button class="btn btn-primary" (click)="onAddServer(serverNameInput.value)">Add Server</button>
+<button class="btn btn-primary" (click)="onAddBluePrint(serverNameInput.value)">Add Server blueprint</button>
