--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,23 @@
 <div class="container">
-  <p>Add new servers or blueprints!</p>
-
-  <app-cockpit
-    (serverCreated)="onServerAdded($event)"
-    (bpCreated)="onBluePrintAdded($event)"
-  ></app-cockpit>
-
-  <app-server-element
-    *ngFor="let serverElement of serverElements"
-    [srvElement]="serverElement"
-  >
-  <div class="card-body">
-    <p class="card-text" *ngIf="serverElement.type === 'server'" style="color : red">{{serverElement.content}}</p>
-    <p class="card-text" *ngIf="serverElement.type === 'bp'" style="color : blue">{{serverElement.content}}</p>
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Bind it!</h3>
+      <ol>
+        <li>Create three new components: GameControl, Odd and Even</li>
+        <li>The GameControl Component should have buttons to start and stop the game</li>
+        <li>When starting the game, an event (holding a incrementing number) should get emitted each second (ref = setInterval())</li>
+        <li>The event should be listenable from outside the component</li>
+        <li>When stopping the game, no more events should get emitted (clearInterval(ref))</li>
+        <li>A new Odd component should get created for every odd number emitted, the same should happen for the Even Component (on even numbers)</li>
+        <li>Simply output Odd - NUMBER or Even - NUMBER in the two components</li>
+        <li>Style the element (e.g. paragraph) holding your output text differently in both components</li>
+      </ol>
+    </div>
   </div>
-  </app-server-element>
+
+  <app-game-control (tickTock)="ctrArray.push($event)"></app-game-control>
+  <div *ngFor="let ctr of ctrArray">
+    <app-even *ngIf="ctr && ctr%2===0" [cnt]="ctr"></app-even>
+    <app-odd *ngIf="ctr && ctr%2!==0" [cnt]="ctr"></app-odd>
+  </div>
 </div>
