Re-structured model files. Shopping list add works

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,12 +2,12 @@
   <div class="row p-1 border">
     <div class="col-8 d-flex align-items-center pr-0 text-truncate">
       <div>
-        <h5>{{recipe.title}}</h5>
+        <h5>{{recipe.name}}</h5>
         <p>{{recipe.description}}</p>
       </div>
     </div>
-    <div class="col-4 pr-0">
-      <img class="rounded img-fluid border" src="{{recipe.image}}">
+    <div class="col-4 pr-0 d-flex align-items-center">
+      <img class="rounded img-fluid border" src="{{recipe.imagePath}}">
     </div>
   </div>
 </div>
