--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-header></app-header>
+<app-header (recipesNavClicked)="onRecipesNavClicked()" (shoppingListNavClicked)="onShoppingListNavClicked()"></app-header>
+<br>
+<div class="container">
+  <app-recipes *ngIf="showRecipe"></app-recipes>
+  <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+</div>
