--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,19 @@
 <div class="card border-0">
-  <img class="mr-auto d-block border mw-100" src="{{recipe.image}}">
+  <img class="mr-auto d-block border mw-100" [src]="recipe.imagePath">
   <div class="card-body px-0">
-    <h2 class="card-title">{{recipe.title}}</h2>
+
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Manage Recipe
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Add ingredients to shopping list</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
+    </div>
+
+    <h2 class="card-title">{{recipe.name}}</h2>
     <p class="card-text">{{recipe.description}}</p>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} - ({{ingredient.quantity}})</li>
