--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,36 +1,30 @@
-<div class="container">
-  <div class="row">
-    <app-recipe-list (recipeItemClicked)="onRecipeListItemClick($event)" (addRecipeClicked)="onAddRecipe()" class="col-lg-4 col-md-6"></app-recipe-list>
-    <app-recipe-detail [recipe]="recipe" *ngIf="recipe" class="col-lg-8 col-md-6"></app-recipe-detail>
-    <!-- <p *ngIf="addBtnClicked" class="col-lg-8 col-md-6">No recipes to display!</p> -->
-    <div *ngIf="addBtnClicked" class="col-lg-8 col-md-6">
-      <div class="form-group ">
-        <label><b>Recipe Name</b></label>
-        <input class="form-control">
-      </div>
-      <div class="form-group">
-        <label><b>Image URL</b></label>
-        <input class="form-control">
-      </div>
-      <div class="form-group">
-        <label><b>Description</b></label>
-        <textarea class="form-control" rows="3"></textarea>
-      </div>
-      <button class="btn btn-success">Add Ingredient</button>
-
-      <!-- <div class="form-inline d-flex justify-content-between">
-        <input type="text" class="form-control" placeholder="Ingredient">
-        <input type="number" class="form-control">
-        <button class="btn btn-primary">clear</button>
-      </div> -->
-      <div class="row">
-        <input type="text" class="form-control col-sm-6" placeholder="Ingredient">
-        <input type="number" class="form-control col-sm-4">
-        <button class="btn btn-primary col-sm-2">clear</button>
-      </div>
-
-      <hr>
-      <button class="btn btn-primary btn-block">Save</button>
+<div class="row m-0">
+  <app-recipe-list (recipeItemClicked)="onRecipeListItemClick($event)" (addRecipeClicked)="onAddRecipe()" class="col-lg-4 col-md-6 pl-md-0"></app-recipe-list>
+  <app-recipe-detail [recipe]="recipe" *ngIf="recipe; else infoText" class="col-lg-8 col-md-6 pr-md-0"></app-recipe-detail>
+  <!-- <p *ngIf="addBtnClicked" class="col-lg-8 col-md-6">No recipes to display!</p> -->
+  <ng-template #infoText>
+    <h3 class="col-lg-8 col-md-6 pl-md-5 pt-3">Please select a recipe</h3>
+  </ng-template>
+  <div *ngIf="addBtnClicked" class="col-lg-8 col-md-6">
+    <div class="form-group ">
+      <label><b>Recipe Name</b></label>
+      <input class="form-control">
     </div>
+    <div class="form-group">
+      <label><b>Image URL</b></label>
+      <input class="form-control">
+    </div>
+    <div class="form-group">
+      <label><b>Description</b></label>
+      <textarea class="form-control" rows="3"></textarea>
+    </div>
+    <button class="btn btn-success">Add Ingredient</button>
+    <div class="form-inline d-flex justify-content-between justify-content-lg-start">
+      <input type="text" class="form-control col-6 col-lg-7" placeholder="Ingredient">
+      <input type="number" class="form-control col-3 col-lg-2 mx-lg-3">
+      <button class="btn btn-danger col-2 col-lg-1 d-flex"><i class="material-icons mx-auto">close</i></button>
+    </div>
+    <hr>
+    <button class="btn btn-primary btn-block">Save</button>
   </div>
 </div>
