--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,24 @@
-<p>
-  shopping-edit works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <form>
+      <div class="row">
+        <div class="form-group col-sm-6 col-md-5">
+          <label for="name">Ingredient Name</label>
+          <input type="text" id="name" class="form-control" #nameInput>
+        </div>
+        <div class="form-group col-sm-3 col-md-2">
+          <label for="qty">Quantity</label>
+          <input type="number" class="form-control" id="qty" #qtyInput>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <!-- <button class="btn btn-success" type="submit" (click)="">Add</button> -->
+          <button class="btn btn-success" type="button" (click)="onAdd()">Add</button>
+          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-primary" type="button">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
