--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,33 @@
-<app-header (recipesNavClicked)="onRecipesNavClicked()" (shoppingListNavClicked)="onShoppingListNavClicked()"></app-header>
-<br>
-<div class="container">
-  <app-recipes *ngIf="showRecipe"></app-recipes>
-  <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <button
+        class="btn btn-primary"
+        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+      <br><br>
+      <ul class="list-group">
+        <li
+          class="list-group-item">
+        </li>
+      </ul>
+      <ng-template [ngIf]="onlyOdd">
+        <p>Only odd</p>
+      </ng-template>
+    </div>
+  </div>
+</div> -->
+
+<div class="container pt-3">
+  <div class="row">
+    <div class="col-12">
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let number of numbers" [ngStyle]="{backgroundColor: number%2 === 0 ? 'powderblue':'tomato'}">
+          {{ number }}
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <br>
+  <p appBasicHighlight>Custom Attribute test para</p>
 </div>
