better directive using renderer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,5 +29,6 @@
   </div>
 
   <br>
-  <p appBasicHighlight>Custom Attribute test para</p>
+  <p appBasicHighlight>Custom directive test para</p>
+  <p appBetterHighlight>Better directive test para</p>
 </div>
