--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,14 @@
     </div>
   <div class="col-12 pt-3">
       <ul class="list-group">
-        <div *ngIf="!onlyOdd">
+        <!-- <div *ngIf="!onlyOdd">
+          <li class="list-group-item"
+              *ngFor="let even of evenNumbers"
+              [ngStyle]="{backgroundColor: number%2 !== 0 ? 'powderblue':'tomato'}">
+            {{ even }}
+          </li>
+        </div> -->
+        <div *appUnless="onlyOdd">
           <li class="list-group-item"
               *ngFor="let even of evenNumbers"
               [ngStyle]="{backgroundColor: number%2 !== 0 ? 'powderblue':'tomato'}">
