--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
-<app-header (recipesNavClicked)="onRecipesNavClicked()" (shoppingListNavClicked)="onShoppingListNavClicked()"></app-header>
-<br>
 <div class="container">
-  <app-recipes *ngIf="showRecipe"></app-recipes>
-  <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+  <div class="row">
+    <div class="col-12 col-lg-8 pt-5">
+      <app-new-account
+        (newAccAdded)= "addAccount($event)"
+      ></app-new-account>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-12 col-lg-8 pt-3">
+      <strong>Accounts:</strong>
+      <app-account
+        *ngFor="let account of accounts; let i = index"
+        [account]=account
+        (accStatusChange)= "accounts[i].status = $event.status"
+        >
+      </app-account>
+    </div>
+  </div>
 </div>
