--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,17 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
-    <div class="col-12 col-lg-8 pt-5">
-      <app-new-account></app-new-account>
+    <div class="col-12 col-md-8">
+      <app-active-users
+        [users]="activeUsers"
+        (userSetToInactive)="onSetToInactive($event)"></app-active-users>
+      <app-inactive-users
+        [users]="inactiveUsers"
+        (userSetToActive)="onSetToActive($event)"></app-inactive-users>
     </div>
-  </div>
-  <div class="row mt-3">
-    <div class="col-12 col-lg-8 pt-3">
-      <strong>Accounts:</strong>
-      <app-account
-        *ngFor = "let account of accounts; let i = index"
-        [account] = 'account'
-        [id] = 'i'
-        >
-      </app-account>
-    </div>
+    <!--
+      Optimize this app by adding a UsersService which manages the active and inactive users.
+
+      Also add a CounterService which counts the number of active->inactive and inactive->active actions.
+    -->
   </div>
 </div>
