--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,16 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-12 col-md-8">
-      <app-active-users
-        [users]="activeUsers"
-        (userSetToInactive)="onSetToInactive($event)"></app-active-users>
-      <app-inactive-users
-        [users]="inactiveUsers"
-        (userSetToActive)="onSetToActive($event)"></app-inactive-users>
+      <app-active-users></app-active-users>
+      <app-inactive-users></app-inactive-users>
     </div>
-    <!--
-      Optimize this app by adding a UsersService which manages the active and inactive users.
-
-      Also add a CounterService which counts the number of active->inactive and inactive->active actions.
-    -->
+  </div>
+  <div class="row p-3">
+    <div class="col-6 col-md-4 bg-secondary text-light">
+      <p>{{ this.usrService.disp1 }}</p>
+    </div>
+    <div class="col-6 col-md-4 bg-secondary text-light">
+      <p class="text-right">{{ this.usrService.disp2 }}</p>
+    </div>
   </div>
 </div>
