[Recipe App] - using services

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card border-0">
+<div class="card border-0" *ngIf='recipe'>
   <img class="mr-auto d-block border mw-100" [src]="recipe.imagePath">
   <div class="card-body px-0">
 
