--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -7,7 +7,7 @@
         Manage Recipe
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" #dropdownMenu>
-        <a class="dropdown-item" href="#">Add ingredients to shopping list</a>
+        <a class="dropdown-item" href="#" (click)='this.recipesSrv.addIngredientsToShoppingList(recipe.ingredients)'>Add ingredients to shopping list</a>
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Delete Recipe</a>
       </div>
