--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,26 @@
-<app-header (recipesNavClicked)="onRecipesNavClicked()" (shoppingListNavClicked)="onShoppingListNavClicked()"></app-header>
-<br>
 <div class="container">
-  <app-recipes *ngIf="showRecipe"></app-recipes>
-  <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+  <div class="row">
+    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link" href="#">Servers</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link" href="#">Users</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
+      <app-home></app-home>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
+      <app-users></app-users>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
+      <app-servers></app-servers>
+    </div>
+  </div>
 </div>
