--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,5 @@
       </ul>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
-      <app-home></app-home>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
-      <app-users></app-users>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
-      <app-servers></app-servers>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
