--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,15 @@
   <div class="row">
     <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-        <li role="presentation" class="nav-item"><a class="nav-link" href="#">Servers</a></li>
-        <li role="presentation" class="nav-item"><a class="nav-link" href="#">Users</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link" href="/servers">Servers</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link" href="/users">Users</a></li>
       </ul>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <div class="row mt-3">
+    <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
